- More robustness in DCOP calls (to prevent crashes)
- Faster pasting of text
- Fix use keyboard when frameset is protect content.
- Fix reload PgUp and PgDn config
- Fixed disappearing frame after undoing deletion of inline frame
- Inserting a non-inline table makes the text flow around it by default

KoText library fixes:
- Fixed preview in paragraph dialog (was truncated)
- Fixed font size applied by "Find/Replace with formatting" and "Autocorrection with formatting".
- Fixed background color not applied by "Find/Replace with formatting".
- Fixed crash when we remove "autocorrect word formatted"
- Fixed mem leak in autocorrect dialogbox (autocorrect list was not deleted )
- Fixed non/working undo/redo when changing paragraph settings for a whole text frameset
- Fixed calculation of centering (visible on very short paragraphs)
- The height of the cursor now depends on the character on the left of the cursor
(instead of being as high as the biggest char in the paragraph).

Crashes:
- Do not crash when pasting an embedded object (not implemented though)
- Fixed crash when removing a footnote variable
- Fixed crash when we close kword and "special char dialogbox" is not closed
- Fixed several problems with footnote layout
- Fixed crash when we delete style that is also used as a 'following style'.
- Fixed crash with bookmarks
- Fixed several memory leaks
- Fixed crash when we canceled create time/date variable.

Changes between KWord-1.2-RC1 and KWord-1.2
===========================================
Bugfixes:
- Fix update ruler tabs when we switch between text object
- Fix move up/down table/frame style
- Fix restore shortcut when we remove/add/rename style

KoText library fixes:
- Fix move up/down style
- Fix crash when we create a new style and delete this style.

Layout:
- Fixed layout of paragraph numbering in Right-To-Left mode.

Crashes:
- Fixed crash when removing pages (and the page number is shown in header/footer)
